--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,12 @@
     <title>Hello World!</title>
     <link rel="stylesheet" href="../css/bootstrap.css">
     <script src="../js/bootstrap.bundle.min.js"></script>
-    <script defer src="render.js"></script>
+    <script defer src="res/render.js"></script>
+    <script defer src="res/popup.js"></script>
+    <script defer src="res/buttons.js"></script>
+    <script defer src="res/resizer.js"></script>
+    <script defer src="res/dropdowns.js"></script>
+    <script defer src="res/output.js"></script>
     <style>
       body {
         overflow-y: hidden;
