reset depending on platform selected instead of RTS/DTR which does not work correctly with serialport node plugin

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,12 @@
     <div class="m-1">
       <div class="container-fluid">
         <div class="row mb-1">
+          
           <button class="col btn btn-outline-primary dropdown-toggle" type="button" id="portDropDown" data-bs-toggle="dropdown" aria-expanded="false">
             Port
           </button>
           <ul class="dropdown-menu" aria-labelledby="portDropDown" id="portDDcontent"></ul>
+          
           <button class="col btn btn-outline-primary dropdown-toggle" type="button" id="baudDropDown" data-bs-toggle="dropdown" aria-expanded="false">
             Baud
           </button>
@@ -47,6 +49,15 @@
             <li><a class="dropdown-item" href="#">460800</a></li>
             <li><a class="dropdown-item" href="#">921600</a></li>
           </ul>
+
+          <button class="col btn btn-outline-primary dropdown-toggle" type="button" id="platformDropDown" data-bs-toggle="dropdown" aria-expanded="false">
+            Platform
+          </button>
+          <ul class="dropdown-menu platform" aria-labelledby="platformDropDown" id="platformDDcontent">
+            <li><a class="dropdown-item" href="#">ESP</a></li>
+            <li><a class="dropdown-item" href="#">ARM</a></li>
+          </ul>
+
           <button class="col btn btn-outline-primary dropdown-toggle" type="button" id="fontDropDown" data-bs-toggle="dropdown" aria-expanded="false">
             Font: 16px
           </button>
@@ -63,6 +74,7 @@
             <li><a class="dropdown-item" href="#">22px</a></li>
             <li><a class="dropdown-item" href="#">26px</a></li>
           </ul>
+
           <input type="checkbox" class="btn-check" id="timestampCb" autocomplete="off">
           <label class="col-1 btn btn-outline-dark darkBtn" for="timestampCb">TS</label>
 
@@ -141,10 +153,10 @@
         <div class="row mb-1">
           <input type="text" class="col form-control" aria-label="txMsg" aria-describedby="sendMsgBtn">
           <button class="col-1 btn btn-outline-dark darkBtn" type="button" id="sendMsgBtn">Send</button>
-          <input type="checkbox" class="btn-check" id="dtrCb" autocomplete="off">
-          <label class="col-1 btn btn-outline-primary" for="dtrCb">DTR</label>
-          <input type="checkbox" class="btn-check" id="rtsCb" autocomplete="off">
-          <label class="col-1 btn btn-outline-primary" for="rtsCb">RTS</label>
+
+          <button type="button" class="col-2 btn btn-outline-primary macroBtn" autocomplete="off", id="restartBtn">
+            Restart
+          </button>
         </div>
 
       </div>
