--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,8 @@
             Font: 16px
           </button>
           <ul class="dropdown-menu font" aria-labelledby="fontDropDown" id="fontDDcontent">
+            <li><a class="dropdown-item" href="#">10px</a></li>
+            <li><a class="dropdown-item" href="#">11px</a></li>
             <li><a class="dropdown-item" href="#">12px</a></li>
             <li><a class="dropdown-item" href="#">13px</a></li>
             <li><a class="dropdown-item" href="#">14px</a></li>
