timestamp hex open file impelemented for file logging

--- a/src/index.html
+++ b/src/index.html
@@ -112,8 +112,8 @@
         </div>
 
         <div class="row mb-1">
-          <textarea class="col form-control" id="output" style="resize: none;"> </textarea>
-          <textarea class="col form-control" id="outputFiltered" style="resize: none;"> </textarea>
+          <textarea readonly class="col form-control" id="output" style="resize: none;"> </textarea>
+          <textarea readonly class="col form-control" id="outputFiltered" style="resize: none;"> </textarea>
         </div>
 
         <div class="row mb-1">
