--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
         </div>
 
         <div class="row mb-1">
-          <input type="text" class="col form-control" aria-label="txMsg" aria-describedby="sendMsgBtn">
+          <input type="text" class="col form-control" aria-label="txMsg" aria-describedby="sendMsgBtn" id="sendMsgText">
           <button class="col-1 btn btn-outline-dark darkBtn" type="button" id="sendMsgBtn">Send</button>
 
           <button type="button" class="col-2 btn btn-outline-primary macroBtn" autocomplete="off", id="restartBtn">
