--- a/src/index.html
+++ b/src/index.html
@@ -117,34 +117,34 @@
         </div>
 
         <div class="row mb-1">
-          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="macro1">
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-1">
             -
           </button>
-          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="macro2">
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-2">
             -
           </button>
-          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="macro3">
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-3">
             -
           </button>
-          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="macro4">
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-4">
             -
           </button>
-          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="macro5">
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-5">
             -
           </button>
-          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="macro6">
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-6">
             -
           </button>
-          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="macro7">
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-7">
             -
           </button>
-          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="macro8">
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-8">
             -
           </button>
-          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="macro9">
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-9">
             -
           </button>
-          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="macro10">
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-10">
             -
           </button>
 
@@ -156,7 +156,7 @@
           <input type="text" class="col form-control" aria-label="txMsg" aria-describedby="sendMsgBtn" id="sendMsgText">
           <button class="col-1 btn btn-outline-dark darkBtn" type="button" id="sendMsgBtn">Send</button>
 
-          <button type="button" class="col-2 btn btn-outline-primary macroBtn" autocomplete="off", id="restartBtn">
+          <button type="button" class="col-2 btn btn-outline-primary" autocomplete="off", id="restartBtn">
             Restart
           </button>
         </div>
