--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
           <label class="col-1 btn btn-outline-dark darkBtn" for="darkModeCb">DM</label>
         </div>
 
-        <div class="row mb-1">
+        <div class="row mb-1" id="outputRow">
           <textarea readonly class="col form-control" id="output" style="resize: none;"> </textarea>
           <textarea readonly class="col form-control" id="outputFiltered" style="resize: none;"> </textarea>
         </div>
