TODO: move timestamp and hex altogether from frontend straight to backend. Also nicer dark mode icon implemented

--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
             Autoresponses
           </button>
           <input type="checkbox" class="btn-check" id="darkModeCb" autocomplete="off">
-          <label class="col-1 btn btn-outline-dark darkBtn" for="darkModeCb">DM</label>
+          <label class="col-1 btn btn-outline-dark darkBtn" for="darkModeCb"> <img id="darkModeStat" src="res/resources/darkShquare.png" alt="lockedCb" width="25" height="25"> </label>
         </div>
 
         <div class="row mb-1" id="outputRow">
