new ipc calls, new window creation, event handler for that window, restructurization of index.html and new html for filters

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/bootstrap-nightfall.min.css" id="darkModeCss">
     <script src="../js/bootstrap.bundle.min.js"></script>
-    <script defer src="res/render.js"></script>
-    <script defer src="res/popup.js"></script>
-    <script defer src="res/buttons.js"></script>
-    <script defer src="res/resizer.js"></script>
-    <script defer src="res/dropdowns.js"></script>
-    <script defer src="res/output.js"></script>
-    <script defer src="res/checkbox.js"></script>
+    <script defer src="res/mainWin/render.js"></script>
+    <script defer src="res/mainWin/popup.js"></script>
+    <script defer src="res/mainWin/buttons.js"></script>
+    <script defer src="res/mainWin/resizer.js"></script>
+    <script defer src="res/mainWin/dropdowns.js"></script>
+    <script defer src="res/mainWin/output.js"></script>
+    <script defer src="res/mainWin/checkbox.js"></script>
     <style>
       body {
         overflow-y: hidden;
@@ -107,8 +107,8 @@
           <button type="button" class="col btn btn-outline-primary" id="openAutoRspBtn">
             Autoresponses
           </button>
-          <input type="checkbox" class="btn-check" id="darkModeCb" autocomplete="off">
-          <label class="col-1 btn btn-outline-dark darkBtn" for="darkModeCb"> <img id="darkModeStat" src="res/resources/darkShquare.png" alt="lockedCb" width="22" height="22"> </label>
+          <input type="checkbox" class="btn-check" id="darkModeCb" checked autocomplete="off">
+          <label class="col-1 btn btn-outline-dark darkBtn" for="darkModeCb"> <img id="darkModeStat" src="res/resources/whiteShquare.png" alt="lockedCb" width="22" height="22"> </label>
         </div>
 
         <div class="row mb-1" id="outputRow">
