--- a/src/filters.html
+++ b/src/filters.html
@@ -8,33 +8,15 @@
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script defer src="../src/res/filterWin/renderFilters.js"></script>
     <style>
-      body {
+      /* body {
         overflow-y: hidden;
         overflow-x: hidden;
-      }
+      } */
     </style>
   </head>
   <body>
     <div class="m-1">
-      <div class="container-fluid">
-
-        <div class="row mb-1">
-          <button class="col  btn btn-outline-primary" type="button" id="clearBtn">
-            Clear
-          </button>
-          <button class="col btn btn-outline-primary" type="button" id="logToFileBtn">
-            Log To File
-          </button>
-          <button type="button" class="col btn btn-outline-primary" id="openFileBtn">
-            Open File
-          </button>
-          <button type="button" class="col btn btn-outline-primary" id="openFiltersBtn">
-            Filters
-          </button>
-          <button type="button" class="col btn btn-outline-primary" id="openAutoRspBtn">
-            Autoresponses
-          </button>
-        </div>
+      <div class="container-fluid" id="container">
 
       </div>
     </div>
