--- a/src/filters.html
+++ b/src/filters.html
@@ -19,6 +19,16 @@
       <div class="container-fluid" id="container">
 
       </div>
+      <div class="container-fluid">
+        <div class="row justify-content-end">
+          <button class="col-2 col-md-1 btn btn-outline-success" type="button" id="saveBtn">
+            Save
+          </button>
+          <button class="col-2 col-md-1 btn btn-outline-danger" type="button" id="closeBtn">
+            Close
+          </button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
