create normal classes instead of fake ones

--- a/src/index.html
+++ b/src/index.html
@@ -78,13 +78,13 @@
           </ul>
 
           <input type="checkbox" class="btn-check" id="timestampCb" autocomplete="off">
-          <label class="col-1 btn btn-outline-dark darkBtn" for="timestampCb">TS</label>
+          <label class="col-1 btn btn-outline-secondary darkBtn" for="timestampCb">TS</label>
 
           <input type="checkbox" class="btn-check" id="hexCb" autocomplete="off">
-          <label class="col-1 btn btn-outline-dark darkBtn" for="hexCb">HEX</label>
+          <label class="col-1 btn btn-outline-secondary darkBtn" for="hexCb">HEX</label>
 
           <input type="checkbox" class="btn-check" id="lockCb" autocomplete="off">
-          <label class="col-1 btn btn-outline-dark darkBtn" for="lockCb"> <img id="lockedStat" src="res/resources/locked.png" alt="lockedCb" width="20" height="25"> </label>
+          <label class="col-1 btn btn-outline-secondary darkBtn" for="lockCb"> <img id="lockedStat" src="res/resources/locked.png" alt="lockedCb" width="20" height="25"> </label>
           
           <button type="button" class="col btn btn-outline-success" autocomplete="off", id="connect">
             Connect
@@ -108,7 +108,7 @@
             Autoresponses
           </button>
           <input type="checkbox" class="btn-check" id="darkModeCb" checked autocomplete="off">
-          <label class="col-1 btn btn-outline-dark darkBtn" for="darkModeCb"> <img id="darkModeStat" src="res/resources/whiteShquare.png" alt="lockedCb" width="22" height="22"> </label>
+          <label class="col-1 btn btn-outline-secondary darkBtn" for="darkModeCb"> <img id="darkModeStat" src="res/resources/whiteShquare.png" alt="lockedCb" width="22" height="22"> </label>
         </div>
 
         <div class="row mb-1" id="outputRow">
@@ -154,7 +154,7 @@
 
         <div class="row mb-1">
           <input type="text" class="col form-control" aria-label="txMsg" aria-describedby="sendMsgBtn" id="sendMsgText">
-          <button class="col-1 btn btn-outline-dark darkBtn" type="button" id="sendMsgBtn">Send</button>
+          <button class="col-1 btn btn-outline-secondary darkBtn" type="button" id="sendMsgBtn">Send</button>
 
           <button type="button" class="col-2 btn btn-outline-primary" autocomplete="off", id="restartBtn">
             Restart
