--- a/src/index.html
+++ b/src/index.html
@@ -112,8 +112,8 @@
         </div>
 
         <div class="row mb-1" id="outputRow">
-          <textarea readonly class="col form-control" id="output" style="resize: none;"> </textarea>
-          <textarea readonly class="col form-control" id="outputFiltered" style="resize: none;"> </textarea>
+          <pre readonly class="col form-control mb-0" id="output" style="resize: none; overflow-y: auto; overflow-x: hidden;"></pre>
+          <pre readonly class="col form-control mb-0" id="outputFiltered" style="resize: none; overflow-y: auto; overflow-x: hidden;"></pre>
         </div>
 
         <div class="row mb-1">
