--- a/src/filters.html
+++ b/src/filters.html
@@ -20,11 +20,14 @@
 
       </div>
       <div class="container-fluid">
-        <div class="row justify-content-end">
-          <button class="col-2 col-md-1 btn btn-outline-success" type="button" id="saveBtn">
+        <div class="row justify-content-around">
+          <button class="col btn btn-outline-danger" type="button" id="clearAllBtn">
+            Clear All
+          </button>
+          <button class="col btn btn-outline-success" type="button" id="saveBtn">
             Save
           </button>
-          <button class="col-2 col-md-1 btn btn-outline-danger" type="button" id="closeBtn">
+          <button class="col btn btn-outline-danger" type="button" id="closeBtn">
             Close
           </button>
         </div>
